    - Perl binary/ftdi_sio module 
  - EM: added setTime, reset
  - docs/fritzbox.html. Note: The fb_fhem_0.1.tar.gz won't be part of CVS
    as it contains largee binaries (swapfile, perl mipsel executable, etc).

- Rudi Mon Aug  6 20:15:00 MEST 2007
  - archiving added to the main logs.
    NOTE: The FileLog filename (INT attribute) is now also called logfile.

- Rudi Wed Aug 29 08:28:34 MEST 2007
  - archive attributes clarified in the doc

- Rudi Mon Sep  3 15:47:59 MEST 2007
  - 99_Sunrise_EL.pm checked in. Replaces 99_Sunrise.pm, and does not need
    any Date module.

- Rudi Sun Sep  9 08:43:03 MEST 2007
  - mode holiday_short added + documentation. Not tested.
    any Date module.

- Rudi Wed Oct  3 18:21:36 MEST 2007
  - weblinks added. Used by webpgm2 to display more than one plot at once
  - webpgm2 output reformatted. Using CSS to divide the screen area in 3
    parts: command line, room-list and rest

- Dirk Wed Oct  7 12:45:09 MEST 2007
  - FHT lime-protection code discovered

- Dirk Wed Oct 18 23:28:00 MEST 2007
  - Softwarebuffer for FHT devices with queuing unsent commands and
    repeating commands by transmission failure
  - FHT low temperatur warning and setting for lowtemp-offset
  - Change naming for state into warnings
    Tagged as dirkh_20071019_0

- Martin Fri Dec 21 13:39:17 CET 2007
  - voip2fhem added (contrib/)

- Peter Sun Dec 23 19:59:00 MEST 2007
  - linux.html: Introduction refinement.

- Rudi Sat Dec 29 16:27:14 MET 2007
  - delattr renamed to deleteattr, as del should complete to delete and not to
    delattr
  - defattr renamed to setdefaultattr (same as before for def)
  - devicespec introduced:
    it may contain a list of devices, a range of devices, or multiple devices
    identified by regexp. Following commands take a devicespec as argument:
    attr, deleteattr, delete, get, list, set, setstate, trigger

- Boris Sat Dec 29 16:56:00 CET 2007
  - %NAME, %EVENT, %TYPE parameters in notify definition, commandref.html update
